# qnp-music

./: .gitignore  AGENTS.md  AGENT_LOOP.md  README.md  main.py  pyproject.toml
.sandcastle/: doctor.md  implement-night-shift.md  preflight-specs.md  sandbox.json
Specs/: 01-cli.md  README.md  draft-02-llm-enrichment.md  preflight-report.md
docs/: harness-doctor.md
imj/: __main__.py  config.py  db.py  main.py  player.py  staging.py
qnpmusic/: __main__.py  config.py  db.py  main.py  staging.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_player.py  test_staging.py
