[project]
name = "imj"
version = "0.0.1"
description = "Local music URL playlist manager with mpv playback (interviews, music, jokes)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
imj = "imj.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
